split css files

--- a/css/style.css
+++ b/css/style.css
@@ -1,364 +1,5 @@
-/*global*/
-* {
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
-	font-size: 14px;
-	font-family: -apple-system, BlinkMacSystemFont, sans-serif;
-	line-height: 1.5;
-	color: #ffffff;
-}
-
-.container {
-	width: 100%;
-	overflow: hidden;
-	margin: auto;
-	background-color: #ffffff;
-	text-align: center;
-}
-
-ul {
-	list-style-type: none;
-}
-
-a {
-	text-decoration: none;
-}
-
-.banner {
-	margin-bottom: 10px;
-}
-
-.banner:nth-child(5),
-.banner:nth-child(6),
-.banner:nth-child(7) {
-	margin-left: 10px;
-	margin-right: 10px;
-}
-
-.banner-content {
-	padding: 45px;
-}
-
-.img-banner {
-	margin-top: 40px;
-}
-
-.banner-content h3 {
-	font-size: 26px;
-	font-weight: lighter;
-	margin: 8px;
-}
-
-.banner-content h2 {
-	font-size: 40px;
-	font-weight: 600;
-	color: #011;
-}
-
-.banner-content h4 {
-	font-size: 20px;
-	font-weight: lighter;
-	color: #011;
-}
-
-.banner-content p {
-	font-size: 16px;
-	font-weight: lighter;
-}
-
-.links-banner a {
-	font-size: 20px;
-	font-weight: lighter;
-	margin-right: 25px;
-	color: #6bf;
-}
-
-.links-banner a:hover {
-	text-decoration: underline;
-}
-
-.links-banner a i {
-	color: #6bf;
-	margin-left: 5px;
-}
-
-.banner-1 {
-	float: left;
-	width: 50%;
-}
-
-.banner-2 {
-	float: right;
-	width: 50%;
-}
-
-.banner-1 .img-banner img ,
-.banner-2 .img-banner img {
-	width: 100%;
-}
-
-.banner-1 a,
-.banner-2 a {
-	font-size: 17px;
-	font-weight: lighter;
-	margin-right: 25px;
-	color: #6bf;
-}
-
-/* end global*/
-
-/* header */
-header {
-	position: sticky;
-	z-index: 2;
-	top: 0;
-	width: 100%;
-}
-header nav {
-	background-color: #333333;
-	padding: 12px;
-}
-
-header nav > ul > li {
-	display: inline;
-	padding: 37px;
-}
-
-header nav > ul > li > a:hover {
-	color: grey;
-}
-
-header nav i.fa {
-	font-size: 16px;
-}
-
-header nav .fa-apple {
-	font-size: 19px;
-}
-
-header nav i.fa:hover {
-	color: grey;
-}
-/* end header */
-
-/* banner iphone xs */
-.banner-iphone-xs .container {
-	background-color: #000000;
-}
-
-.banner-iphone-xs .img-banner {
-	margin-bottom: -10px;
-}
-
-/* end banner iphone xs */
-
-/* banner iphone xr */
-.banner-iphone-xr .container {
-	background-color: #000000;
-}
-
-.banner-iphone-xr .img-banner {
-	margin-bottom: -10px;
-}
-/* end banner iphone xr */
-
-/* banner watch */
-.banner-watch .container {
-	background-color: #fbfbfb;
-}
-
-.banner-watch .banner-content {
-	float: left;
-	width: 50%;
-	text-align: center;
-	padding-top: 200px;
-	height: 540px;
-}
-
-.banner-watch .banner-content h3 {
-	color: #011;
-}
-
-.banner-watch .img-banner {
-	float: right;
-	width: 50%;
-	text-align: center;
-	margin-bottom: -10px;
-	position: relative;
-	height: 540px;
-}
-
-.banner-watch .img-banner img {
-	position: absolute;
-	left: 0;
-	top: -90px;
-}
-
-.banner-watch .links-banner a{
-	color: #0070c9;
-}
-
-.banner-watch .links-banner a i{
-	color: #0070c9;
-}
-
-/* banner music & airpods */
-/* banner music */
-.banner-music {
-	background-image: url("https://www.apple.com/v/home/dx/images/promos/apple-music/apple_music_large.jpg");
-	height: 580px;
-	background-size: cover;
-	background-position: center;
-	position: relative;
-}
-
-.banner-music a,
-.banner-music h4,
-.banner-music a i {
-	color: white;
-}
-
-.banner-music .banner-content img:last-child {
-	position: absolute;
-	bottom: 50px;
-}
-/* end banner music */
-
-/* banner airpod */
-.banner-airpods {
-	background-color: #fbfbfb;
-}
-.banner-airpods .img-banner {
-	height: 335px;
-}
-
-.banner-airpods .img-banner img {
-	width: 60%;
-	margin-top: -50px;
-}
-
-.banner-airpods .links-banner a{
-	color: #0070c9;
-}
-
-.banner-airpods .links-banner a i{
-	color: #0070c9;
-}
-/* end banner airpod */
-/* end banner music & airpods */
-
-/* banner giveback & homepod */
-/* banner-giveback */
-.banner-giveback {
-	background-color: #fbfbfb;
-	position: relative;
-	overflow: hidden;
-}
-
-.banner-giveback .banner-content {
-	position: absolute;
-	top: 0;
-	width: 100%;
-	z-index: 1;
-}
-
-.banner-giveback .img-banner {
-	height: 535px;
-}
-
-.banner-giveback .img-banner img {
-	width: 200%;
-	position: absolute;
-	left: -50%;
-	top: 0;
-}
-
-.banner-giveback .links-banner a{
-	color: #0070c9;
-}
-
-.banner-giveback .links-banner a i{
-	color: #0070c9;
-}
-/* end banner-giveback */
-
-/* banner-homepod */
-.banner-homepod {
-	background-color: #fbfbfb;
-	position: relative;
-	overflow: hidden;
-}
-
-.banner-homepod .banner-content {
-	position: absolute;
-	top: 0;
-	width: 100%;
-	z-index: 1;
-}
-
-.banner-homepod .img-banner {
-	height: 535px;
-	text-align: center;
-}
-
-.banner-homepod .img-banner img {
-	width: 60%;
-	position: absolute;
-	top: 34%;
-	left: 20%;
-}
-
-.banner-homepod .links-banner a{
-	color: #0070c9;
-}
-
-.banner-homepod .links-banner a i{
-	color: #0070c9;
-}
-/* end banner-homepod */
-/* end banner giveback & homepod */
-
-/* banner macbookpro & ipad */
-/* banner macbookpro */
-.banner-macbookpro {
-	background-image: url("https://www.apple.com/v/home/dx/images/promos/macbook-pro/macbook_pro_performance_large.jpg");
-	height: 580px;
-	background-size: cover;
-	background-position: center;
-	position: relative;
-}
-
-.banner-macbookpro h2,
-.banner-macbookpro h4 {
-	color: white;
-}
-
-.banner-macbookpro .banner-content img {
-	position: absolute;
-	bottom: 50px;
-}
-/* end banner macbookpro */
-
-/* banner ipad */
-.banner-ipad {
-	background-color: #fbfbfb;
-}
-.banner-ipad .img-banner {
-	height: 335px;
-}
-
-.banner-ipad .img-banner img {
-	width: 80%;
-	margin-top: 0;
-}
-
-.banner-ipad .links-banner a{
-	color: #0070c9;
-}
-
-.banner-ipad .links-banner a i{
-	color: #0070c9;
-}
-/* end banner ipad */
-/* end banner macbookpro & ipad */
+@import "./global.css";
+@import "./header.css";
+@import "./banners.css";
+@import "./footer.css";
+@import "./responsive.css";
